--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <p id="ddBirth"></p>
         </div>
 
+        <!-- Life path  -->
         <div class="  lined">
             <details>
                 <summary class="cols2">
@@ -117,6 +118,7 @@
             </details>
         </div>
 
+        <!-- Born day ? Birthday Number  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -127,6 +129,7 @@
             </details>
         </div>
 
+        <!-- Expression ? Destiny  -->
         <details>
             <summary class="cols2-nil">
                 <div class="f-row" >
@@ -148,7 +151,7 @@
             <p id="emeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
         </details>
 
-
+        <!-- Soul urge ? heart desire  -->
         <details>
             <summary class="cols2-nil">
                 <div class=" f-row " >
@@ -165,11 +168,12 @@
                         <p id="msuhdNum" class="special"></p>               
                     </div>
                 </div>
-
             </summary>
             <p id="suhdText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
         </details>
 
+
+        <!-- Personality / Minor Personality  -->
         <details>
             <summary class="cols2-nil">
                 <div class=" f-row " >
@@ -190,6 +194,8 @@
             <p id="perText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
         </details>
 
+
+        <!-- Maturity  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -200,6 +206,7 @@
             </details>
         </div>
 
+        <!-- Attitude  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -210,6 +217,7 @@
             </details>
         </div>
 
+        <!-- Life Path ? Expression Bridge  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -220,6 +228,7 @@
             </details>
         </div>
 
+        <!-- Hearts desire ? Personality Bridge  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -230,6 +239,7 @@
             </details>
         </div>
 
+        <!-- Rational THought  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -240,6 +250,7 @@
             </details>
         </div>
 
+        <!-- Balance Number  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -249,7 +260,8 @@
                 <p id="bnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
             </details>
         </div>
-
+        
+        <!-- Subconcious Self  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -260,6 +272,7 @@
             </details>
         </div>
 
+        <!-- Karmic Lesson  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -270,6 +283,7 @@
             </details>
         </div>
 
+        <!-- Karmic Debt  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -280,6 +294,7 @@
             </details>
         </div>
 
+        <!-- Hidden Passion  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -290,6 +305,7 @@
             </details>
         </div>
 
+        <!-- Hereditary Name  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -300,6 +316,7 @@
             </details>
         </div>
 
+        <!-- CornerStone  -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
@@ -310,6 +327,7 @@
             </details>
         </div>
 
+        <!-- Physical Plane of Expression -->
         <div class=" lined">
             <details>
                 <summary class="cols2">
