--- a/test.html
+++ b/test.html
@@ -1,325 +1,8 @@
-
-<section class="hide" id="hide">
-
-    <!-- life path number  -->
-    <details>
-        <summary>
-                <p class="label">Life Path number</p>
-                <p class="result" id="lpResult">12/3</p>
-
-        </summary>
-        <p id="lpText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-    </details>
-
-
-<!-- Birthday Number  -->
-<details>
-    <summary>
-            <p class="label">Birthday Number</p>
-            <p class="result" id="bnResult">30/3</p>
-    </summary>
-    <p id="bnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Born Day Number  -->
-<details>
-    <summary >
-            <p class="label">Born Day Number</p>
-            <p class="result" id="bdnResult">10</p>
-    </summary>
-    <p id="bdnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Expression ? Destiny Number  -->
-<details>
-    <summary >
-            <p class="label">Expression / Destiny Number</p>
-            <p class="result" id="ednResult">10</p>
-    </summary>
-    <p id="ednText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Soul Urge / Heart's Desire  -->
-<details>
-    <summary >
-            <p class="label">Soul Urge / Heart's Desire</p>
-            <p class="result" id="suhdResult">10</p>
-    </summary>
-    <p id="suhdText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Personality Number  -->
-<details>
-    <summary >
-            <p class="label">Personality Number</p>
-            <p class="result" id="pnResult">10</p>
-    </summary>
-    <p id="pnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Maturity Number  -->
-<details>
-    <summary >
-            <p class="label">Maturity Number</p>
-            <p class="result" id="mnResult">10</p>
-    </summary>
-    <p id="mnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Attitude Number  -->
-<details>
-    <summary >
-            <p class="label">Attitude Number</p>
-            <p class="result" id="anResult">10</p>
-    </summary>
-    <p id="anText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Life Path Expression Bridge  -->
-<details>
-    <summary >
-            <p class="label">Life Path Expression Bridge</p>
-            <p class="result" id="lpebResult">10</p>
-    </summary>
-    <p id="lpebText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- heart's Desire / Personality Bridge  -->
-<details>
-    <summary >
-            <p class="label">Heart's Desire / Personality Bridge</p>
-            <p class="result" id="hdpbResult">10</p>
-    </summary>
-    <p id="hdpbText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Rational Thought Number  -->
-<details>
-    <summary >
-            <p class="label">Rational Thought Number</p>
-            <p class="result" id="rtnResult">10</p>
-    </summary>
-    <p id="rtnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Balance Number  -->
-<details>
-    <summary >
-            <p class="label">Balance Number</p>
-            <p class="result" id="blnResult">10</p>
-    </summary>
-    <p id="blnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Subconscious Self Number  -->
-<details>
-    <summary >
-            <p class="label">Subconscious Self Number</p>
-            <p class="result" id="ssnResult">10</p>
-    </summary>
-    <p id="ssnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Karmic Debt Number  -->
-<details>
-    <summary >
-            <p class="label">Karmic Debt Number</p>
-            <p class="result" id="kdnResult">10</p>
-    </summary>
-    <p id="kdnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Karmic Lesson  -->
-<details>
-    <summary >
-            <p class="label">Karmic Lesson</p>
-            <p class="result" id="kclResult">10</p>
-    </summary>
-    <p id="kclText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Hidden Passion  -->
-<details>
-    <summary >
-            <p class="label">Hidden Passion</p>
-            <p class="result" id="hpResult">10</p>
-    </summary>
-    <p id="hpText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Hereditary Name Number  -->
-<details>
-    <summary >
-            <p class="label">Hereditary Name Number</p>
-            <p class="result" id="hnnResult">10</p>
-    </summary>
-    <p id="hnnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Physical plane of expression  -->
-<details>
-    <summary >
-            <p class="label">Physical Plane of Expression</p>
-            <p class="result" id="ppoeResult">10</p>
-    </summary>
-    <p id="ppoeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Mental Plane of Expression  -->
-<details>
-    <summary >
-            <p class="label">Mental Plane of Expression</p>
-            <p class="result" id="mpeResult">10</p>
-    </summary>
-    <p id="mpeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Intuitive Plane of Expression  -->
-<details>
-    <summary >
-            <p class="label">Intuitive Plane of Expression</p>
-            <p class="result" id="ipeResult">10</p>
-    </summary>
-    <p id="ipeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Emotional Plane of Expression  -->
-<details>
-    <summary >
-            <p class="label">Emotional Place of Expression</p>
-            <p class="result" id="epeResult">10</p>
-    </summary>
-    <p id="epeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Cornerstone  -->
-<details>
-    <summary >
-            <p class="label">Cornerstone</p>
-            <p class="result" id="cstResult">10</p>
-    </summary>
-    <p id="cstText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!--Personal Year Number  -->
-<details>
-    <summary>
-            <p class="label">Personal Year Number</p>
-            <p class="result" id="pynResult">10</p>
-    </summary>
-    <p id="pynText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Essence Cycle  -->
-<details>
-    <summary >
-            <p class="label">Essence Cycle</p>
-            <p class="result" id="ecResult">10</p>
-    </summary>
-    <p id="ecText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Transit Cycle  -->
-<details>
-    <summary >
-            <p class="label">Transit Cycle</p>
-            <p class="result" id="ttcResult">10</p>
-    </summary>
-    <p id="ttcText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Period Cycle Number  -->
-<details>
-    <summary >
-            <p class="label">Period Cycle Number</p>
-            <p class="result" id="pcnResult">10</p>
-    </summary>
-    <p id="pcnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Pinnacle Number  -->
-<details>
-    <summary >
-            <p class="label">Pinnacle Number</p>
-            <p class="result" id="pnnResult">10</p>
-    </summary>
-    <p id="pnnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-<!-- Challenge Number  -->
-<details>
-    <summary >
-            <p class="label">Challenge Number</p>
-            <p class="result" id="clnResult">10</p>
-    </summary>
-    <p id="clnText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-</details>
-
-
-
-console.log(count)
-    if (Number(count) === 10) {
-        sum = 1;
-    } else if (Number(count) < 10) {
-        sum = Number(count)
-    } else if (Number(count) === 11 || Number(count) === 22  || Number(count) === 33){
+else if (lifePathText === '22/4') {
+    lpText.innerHTML = `
+    <h3 class="bold-description-label">Life Path Number 22/4</h3> <br>
+    <p>
         
-        sum = Number(count) 
-    }else if (Number(count) > 10) {
-        mSplit = String(count).split('');
-        sum = eval(mSplit.join('+'));
-    } 
-
-    if (Number(dayString) === 10) {
-        edHold = 1;
-    } else if (Number(dayString) < 10) {
-        edHold = Number(dayString)
-    } else if (Number(dayString) === 11 || Number(dayString) === 22  || Number(dayString) === 33){
-        edHold = Number(dayString)
-    }else if (Number(dayString > 10)) {
-        mSplit = String(dayString).split('');
-        edHold = eval(mSplit.join('+'));
-    } else {
-        edHold = Number(dayString)
-    }
-    x = sum + edHold;
-    console.log(x)
-    if (x < 10) {
-        x;
-    } else if (x === 10) {
-        x = '10/1';
-    } else if (x === 11) {
-        x = '11/2'
-    } else if (x === 22) {
-        x = '22/4'
-    } else if (x === 33) {
-        x = '33/6'
-    } else {
-        mSplit = String(x).split('');
-        edHold = eval(mSplit.join('+'));
-        x = edHold;
-    }
-
-
-
-
-if (ednfName[iterate][i].toUpperCase() === 'A' || ednfName[iterate][i].toUpperCase() === 'J' || ednfName[iterate][i].toUpperCase() === 'S') {
-    count += 1;
-} else if (ednfName[iterate][i].toUpperCase() === 'B' || ednfName[iterate][i].toUpperCase() === 'K' || ednfName[iterate][i].toUpperCase() === 'T') {
-    count += 2;
-} else if (ednfName[iterate][i].toUpperCase() === 'C' || ednfName[iterate][i].toUpperCase() === 'L' || ednfName[iterate][i].toUpperCase() === 'U') {
-    count += 3;
-} else if (ednfName[iterate][i].toUpperCase() === 'D' || ednfName[iterate][i].toUpperCase() === 'M' || ednfName[iterate][i].toUpperCase() === 'V') {
-    count += 4;
-} else if (ednfName[iterate][i].toUpperCase() === 'E' || ednfName[iterate][i].toUpperCase() === 'N' || ednfName[iterate][i].toUpperCase() === 'W') {
-    count += 5;
-} else if (ednfName[iterate][i].toUpperCase() === 'F' || ednfName[iterate][i].toUpperCase() === 'O' || ednfName[iterate][i].toUpperCase() === 'iterate') {
-    count += 6;
-} else if (ednfName[iterate][i].toUpperCase() === 'G' || ednfName[iterate][i].toUpperCase() === 'P' || ednfName[iterate][i].toUpperCase() === 'Y') {
-    count += 7;
-} else if (ednfName[iterate][i].toUpperCase() === 'H' || ednfName[iterate][i].toUpperCase() === 'Q' || ednfName[iterate][i].toUpperCase() === 'Z') {
-    count += 8;
-} else if (ednfName[iterate][i].toUpperCase() === 'I' || ednfName[iterate][i].toUpperCase() === 'R' ) {
-    count += 9;
+    </p>
+    `
 }
-
