--- a/test.html
+++ b/test.html
@@ -1,12 +1,16 @@
-else if (expressionText === 1) {
-    emeText.innerHTML = `
+else if (soulUrgeText === 1) {
+    msuhdText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
-    Expression or destiny number comes from all of the letters of your full
-    name on your birth certificate. It defines our character and inner gifts 
+        Your soul urge, also known as heart's desire, represents what makes
+        you happy in life; this number expresses what your heart and soul
+        seek more than anything else in the world. It expresses your desires,
+        goals, and dreams. It is the prism through which you make decisions
+        and displays your fundamental motives. The vowels in your birth name
+        can be used to calculate your soul urge number.
     </p> <br> <br>
     
-    <h3 class="bold-description-label">Expression Number 1</h3> <br>
+    <h3 class="bold-description-label">Soul Urge Number 1</h3> <br>
     <p>
         
     </p>
