--- a/test.html
+++ b/test.html
@@ -1,16 +1,16 @@
-else if (soulUrgeText === 1) {
+else if (minorSoulUrgeText === 1) {
     msuhdText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
-        Your soul urge, also known as heart's desire, represents what makes
-        you happy in life; this number expresses what your heart and soul
-        seek more than anything else in the world. It expresses your desires,
-        goals, and dreams. It is the prism through which you make decisions
-        and displays your fundamental motives. The vowels in your birth name
-        can be used to calculate your soul urge number.
+        The vowels in your present name, which you now use to identify
+        yourself, are used to calculate the Minor Heart's Desire number. It
+        enhances and unifies the energy emitted by your full name. It's
+        possible that your current name reveals what you actually want in life.
+        It has an effect on how you feel about yourself and modifies your
+        identity in a minor way.
     </p> <br> <br>
     
-    <h3 class="bold-description-label">Soul Urge Number 1</h3> <br>
+    <h3 class="bold-description-label">Minor Soul Urge Number 1</h3> <br>
     <p>
         
     </p>
