--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </summary>
             <p id="suhdText" class="lined">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
-            <p id="msuhdText"></p>
+            <p id="msuhdText" class="lined"></p>
         </details>
 
 
@@ -195,6 +195,7 @@
                 </div>
             </summary>
             <p id="perText" class="lined">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
+            <p id="mperText" class="lined"></p>
         </details>
 
 
