--- a/test.html
+++ b/test.html
@@ -1,16 +1,15 @@
-else if (minorSoulUrgeText === 1) {
-    msuhdText.innerHTML = `
+else if (attitudeText === '1') {
+    aText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
-        The vowels in your present name, which you now use to identify
-        yourself, are used to calculate the Minor Heart's Desire number. It
-        enhances and unifies the energy emitted by your full name. It's
-        possible that your current name reveals what you actually want in life.
-        It has an effect on how you feel about yourself and modifies your
-        identity in a minor way.
+        Your Attitude number shows a great deal about your natural ability to
+    succeed at anything you choose to pursue. Also called <span class="redLine"> Achievement
+    Number. </span>
+
+
     </p> <br> <br>
     
-    <h3 class="bold-description-label">Minor Soul Urge Number 1</h3> <br>
+    <h3 class="bold-description-label">Attitude Number 1</h3> <br>
     <p>
         
     </p>
