--- a/test.html
+++ b/test.html
@@ -1,15 +1,12 @@
-else if (attitudeText === '1') {
-    aText.innerHTML = `
+else if (HerDesPerText === '1') {
+    hdpbText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
-        Your Attitude number shows a great deal about your natural ability to
-    succeed at anything you choose to pursue. Also called <span class="redLine"> Achievement
-    Number. </span>
-
-
+        The heart’s desire/personality bridge number is like a bridge between
+        what you really are and what others think you are.
     </p> <br> <br>
     
-    <h3 class="bold-description-label">Attitude Number 1</h3> <br>
+    <h3 class="bold-description-label">Heart Desire/ Personality Bridge Bridge 0</h3> <br>
     <p>
         
     </p>
