--- a/test.html
+++ b/test.html
@@ -1,12 +1,13 @@
-else if (HerDesPerText === '1') {
-    hdpbText.innerHTML = `
+else if (klcText === '1') {
+    klText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
-        The heart’s desire/personality bridge number is like a bridge between
-        what you really are and what others think you are.
+        The hidden passion number tells you about your hidden talents and
+        strengths, it also reveals your personality like what you are good at,
+        and what you love to do.
     </p> <br> <br>
     
-    <h3 class="bold-description-label">Heart Desire/ Personality Bridge Bridge 0</h3> <br>
+    <h3 class="bold-description-label">Hidden Passion Number 1</h3> <br>
     <p>
         
     </p>
