--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
 
 
-        <h3 id="yforecast">Yearly Forecast Cycles at ____ years of age - 2022</h3>
+        <h3 id="yforecast">Yearly Forecast Cycles </h3>
 
         <div class="cols8 lined" >
             <p >Physical <br>Transit</p>                 
