--- a/index.html
+++ b/index.html
@@ -379,23 +379,32 @@
             <p class="head2"></p>
         </div>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">First</span> Period Cycle</p>
-            <p id="fpCycle" > from birth to age _</p>
-            <p id="fpCycleNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">First</span> Period Cycle</p>
+                <p id="fpCycle" > from birth to age _</p>
+                <p id="fpCycleNum"></p>
+            </summary>
+            <p id="fpCycleText" class="lined"></p>
+        </details>
+        
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Second</span> Period Cycle</p>
+                <p id="spCycle"> from age _ to _</p>
+                <p id="spCycleNum"></p>
+            </summary>
+            <p class="lined" id="spCycleText"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Second</span> Period Cycle</p>
-            <p id="spCycle"> from age _ to _</p>
-            <p id="spCycleNum"></p>
-        </div>
-
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Third</span> Period Cycle</p>
-            <p id="tpCycle"> from age _ and on</p>
-            <p id="tpCycleNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Third</span> Period Cycle</p>
+                <p id="tpCycle"> from age _ and on</p>
+                <p id="tpCycleNum"></p>
+            </summary>
+            <p class="lined" id="tpCycleText"></p>
+        </details>
 
 
 
