--- a/test.html
+++ b/test.html
@@ -1,19 +1,19 @@
-else if (fCycleText === '1') {
-    fpCycleText.innerHTML = `
+else if (tCycleText === '1') {
+    tpCycleText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
         Our lives are divided into three major categories called period cycles.
         Which cycle age of start and duration is based on your life path
         number. <br> <br>
-        <b>Second</b> Period Cycle or Middle Period
-            - Throughout your middle years of life, you are on a tough
-            journey of personal development (about ages 28/30 to 55/60).
-            On a regular basis, you must adapt to the numerous highs and
-            lows in your life. Carries to the gradual blossoming of our
-            unique and creative abilities.
+        <b>Third</b> Period or Final Cycle
+            - May signify the blossoming of our inner essence, bringing our
+            real nature to manifestation. This is the time when you have the
+            most freedom and capacity to express yourself. around 55/60
+            till death.
+
        </p> <br> <br>
     
-    <h3 class="bold-description-label">First Period Cycle 1</h3> <br>
+    <h3 class="bold-description-label">Third Period Cycle 1</h3> <br>
     <p>
         
     </p>
@@ -21,11 +21,6 @@ else if (fCycleText === '1') {
     `
 }
 
-Third Period or Final Cycle
-- May signify the blossoming of our inner essence, bringing our
-real nature to manifestation. This is the time when you have the
-most freedom and capacity to express yourself. around 55/60
-till death.
 
 
 case 'C':
