--- a/index.html
+++ b/index.html
@@ -413,58 +413,85 @@
             <p class="head2"></p>
         </div>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">First</span> Pinnacle</p>
-            <p id="fPin"> from birth to age _</p>
-            <p id="fPinNum"></p>
-        </div>
+        
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">First</span> Pinnacle</p>
+                <p id="fPin"> from birth to age _</p>
+                <p id="fPinNum"></p>
+            </summary>
+            <p id="fpPinText" class="lined"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Second</span> Pinncale</p>
-            <p id="sPin"> from age _ to _</p>
-            <p id="sPinNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Second</span> Pinncale</p>
+                <p id="sPin"> from age _ to _</p>
+                <p id="sPinNum"></p>
+            </summary>
+            <p class="lined" id="spPinText"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Third</span> Pinnacle</p>
-            <p id="tPin"> from age _ to _</p>
-            <p id="tPinNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Third</span> Pinnacle</p>
+                <p id="tPin"> from age _ to _</p>
+                <p id="tPinNum"></p>
+            </summary>
+            <p id="tpPinText" class="lined"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Fourth</span> Pinnacle</p>
-            <p id="ftPin"> from age _ and on</p>
-            <p id="ftPinNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Fourth</span> Pinnacle</p>
+                <p id="ftPin"> from age _ and on</p>
+                <p id="ftPinNum"></p>
+            </summary>
+            <p class="lined" id="ftpPinText"></p>
+        </details>
+
 
         <div class="cols2 line">
             <p class="head1">Your Challenges in Life : </p>
             <p class="head2"></p>
         </div>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">First</span> Challenge</p>
-            <p id="fCha">From Birth to 30/35</p>
-            <p id="fChaNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">First</span> Challenge</p>
+                <p id="fCha">From Birth to 30/35</p>
+                <p id="fChaNum"></p>
+            </summary>
+            <p id="fChaText" class="lined"></p>
+        </details>
+        
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Second</span> Challenge</p>
+                <p id="sCha">From 35 to 55/50</p>
+                <p id="sChaNum"></p>
+            </summary>
+            <p class="lined" id="sChaText"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Second</span> Challenge</p>
-            <p id="sCha">From 35 to 55/50</p>
-            <p id="sChaNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Third</span> Challenge</p>
+                <p id="tCha">All your life</p>
+                <p id="tChaNum"></p>
+            </summary>
+            <p class="lined" id="tChaText"></p>
+        </details>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Third</span> Challenge</p>
-            <p id="tCha">All your life</p>
-            <p id="tChaNum"></p>
-        </div>
 
-        <div class="cols3-equal lined" id="cols3">
-            <p > <span class="blue">Fourth</span> Challenge</p>
-            <p id="ftCha">From 55/60 until death</p>
-            <p id="ftChaNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined" id="cols3">
+                <p > <span class="blue">Fourth</span> Challenge</p>
+                <p id="ftCha">From 55/60 until death</p>
+                <p id="ftChaNum"></p>
+            </summary>
+            <p class="lined" id="ftChaText"></p>
+        </details>
 
 
         <h3 id="yforecast">Yearly Forecast Cycles </h3>
