--- a/index.html
+++ b/index.html
@@ -522,11 +522,17 @@
             <p id="cDay">Thursday</p>
         </div>
 
-        <div class="cols3-equal lined">
-            <p id="cYearNum"></p>
-            <p id="cMonthNum"></p>
-            <p id="cDayNum"></p>
-        </div>
+        <details>
+            <summary class="cols3-equal lined">
+                <p id="cYearNum"></p>
+                <p id="cMonthNum"></p>
+                <p id="cDayNum"></p>
+            </summary>
+            <p class="lined" id="perYearText"></p>
+            <p class="lined" id="perMonthText"></p>
+            <p class="lined" id="perDayText"></p>
+        </details>
+
 
 
     </section>
