--- a/test.html
+++ b/test.html
@@ -1,16 +1,13 @@
-else if (perCYText === '1') {
-    perYearText.innerHTML = `
+else if (perCDText === '1') {
+    perDayText.innerHTML = `
     <h3 class="bold-description-label">Definition</h3> <br>
     <p>
         
-        The Personal Year Cycles disclose external influences, changing circumstances,
-        situations, opportunities, and challenges for the upcoming year. 
-
-       </p> <br> <br>
+       </p> <br>
     
-    <h3 class="bold-description-label red-span">Personal Year - 1</h3> <br>
+    <h3 class="bold-description-label red-span">Personal Day Number - 1</h3> <br>
     <p>
-        <p class="border"></p>
+        <p class="blue"></p> <br>
 
     </p>
 
