--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     
     <header id="header">
-        <h1>Chart Calculator</h1>
+        <h1 class="bluePrint">Discover Your Soul Blueprint</h1>
+        <h1 class="chart">Full Chart Calculator <br>& <br>Readings</h1>
     </header>
 
     <section class="main-body">
