--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <header id="header">
         <h1 class="bluePrint">Discover Your Soul Blueprint</h1>
-        <h1 class="chart">Full Chart Calculator <br>& <br>Reports</h1>
+        <h1 class="chart">Complete Numerology Chart Calculator <br>& <br>Readings</h1>
     </header>
 
     <section class="main-body">
